# FestFriendServer

./: README.md  pyproject.toml  requirements.txt  server.py  test_server.py
.github/workflows/: pytest.yaml
src/fest_friend_server/: __init__.py  __main__.py  server.py
test/: test_server.py
